Made stop button

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,6 +3,7 @@
     <h1>Auto Refresher Extension</h1>
     <input type="text" placeholder="Input a delay (Seconds)" id="delay" />
     <button id="submit">Refresh</button>
+    <button id="stop">Stop</button>
     <script src="../dist/script.js"></script>
   </body>
 </html>
